# MoDE

./: MoDE.py  README.md  benchmark_MoDE.py  benchmark_mode.sh  demo.py  metrics.py  test.py  test_MoDE.ipynb  waterfilling_compression.py
Python_implementation/: .gitignore  .pre-commit-config.yaml  Example_S_curve_dataset.ipynb  MoDE.py  compare_embed_methods.ipynb  fastmap.py  metrics.py  parula_colormap.pkl  pyproject.toml  readme.md  run_MoDE_ndim.py  run_MoDE_ndim_bash.sh  setup.cfg  setup.py  test_MoDE.ipynb
Python_implementation/MoDE_ndim_results/: arrow_train_Phi.npy  breast_cancer_train_Phi.npy  breast_cancer_train_metrics_c.pkl  breast_cancer_train_metrics_d.pkl  phishing_train_Phi.npy  phishing_train_metrics_c.pkl  phishing_train_metrics_d.pkl  small_stock_Phi.npy  small_stock_metrics_c.pkl  small_stock_metrics_d.pkl  wafer_train_Phi.npy  wafer_train_metrics_c.pkl  wafer_train_metrics_d.pkl  wine_train_Phi.npy  wine_train_metrics_c.pkl  wine_train_metrics_d.pkl
Python_implementation/notebooks/: Example_S_curve_dataset.ipynb  test_MoDE.ipynb
Python_implementation/src/MoDE_embeddings/: MoDE.py  benchmark_MoDE.py  metrics.py  waterfilling_compression.py
Python_implementation/src/MoDE_embeddings.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python_implementation/src/MoDE_embeddings/fast_mat_mul/: fastgd_cython.pyx  setup.py
Python_implementation/src/MoDE_embeddings/fast_mat_mul/fastgd.egg-info/: PKG-INFO  (+2 more)
Python_implementation/src/MoDE_embeddings/fastgd/: bootstrap.c  bootstrap.pyx  fastgd_base.c  fastgd_cython.c  fastgd_faster.c  fastgd_faster.pyx
(+81 files in other folders)
